--- a/package.json
+++ b/package.json
@@ -1,22 +1,51 @@
 {
-  "name": "my-portfolio",
-  "version": "1.0.0",
-  "description": "Personal portfolio website showcasing my projects and skills",
-  "main": "index.html",
+  "name": "portfolio-3d",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@react-three/drei": "^10.5.1",
+    "@react-three/fiber": "^9.2.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^12.23.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^6.1.19",
+    "three": "^0.178.0",
+    "web-vitals": "^2.1.4",
+    "workbox-webpack-plugin": "^7.3.0"
+  },
   "scripts": {
-    "start": "npx http-server . -p 3000",
-    "build": "echo 'No build step required for static portfolio'"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && vercel --prod"
   },
-  "keywords": [
-    "portfolio",
-    "web-developer",
-    "frontend",
-    "projects",
-    "personal-website"
-  ],
-  "author": {
-    "name": "Your Name",
-    "email": "your.email@example.com"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "license": "MIT"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/three": "^0.178.1",
+    "webpack-bundle-analyzer": "^4.10.2"
+  }
 }
