--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "styled-components": "^6.1.19",
     "three": "^0.178.0",
     "web-vitals": "^2.1.4",
-    "workbox-webpack-plugin": "^7.3.0"
+    "workbox-webpack-plugin": "^7.3.0",
+    "@emailjs/browser": "^3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
