--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
     "@testing-library/dom": "^10.4.0",
@@ -17,8 +18,7 @@
     "styled-components": "^6.1.19",
     "three": "^0.178.0",
     "web-vitals": "^2.1.4",
-    "workbox-webpack-plugin": "^7.3.0",
-    "@emailjs/browser": "^3.11.0"
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
